# Homework_c-_3sem

./: README.md
1_week/: CMakeProject_1_week_task-1.h
1_week/task-1/: CMakeLists.txt  CMakeProject_1_week_task-1.cpp
2_week/task-2/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab_work/: var_2.cpp  var_3.cpp
